src/test/deca/context/invalid/class/34_exempleSlide1.deca
/* Description:
    un programme simple fournie dans les slides

    Historique:
      cree le 20/01/2020
    Sortie attendu:
     erreur pendant la passe 2 ( B n'est pas définie)
*/
class A {
  B b;
}
